# PING77

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/api/: config.py  database.py  main.py  models.py  schemas.py  shapley.py
apps/web/: package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/app/query/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/lib/: api.ts
contracts/: README.md
docs/: 001-extracting-death-modes.md  002-continuous-time-pricing.md  003-honest-incentives.md  004-self-host-guide.md
infra/: README.md
